samples/_failures_safe/1761646568_4ae538_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1a3a74b.c:129: error: expected ‘;’, ‘,’ or ‘)’ at end of input
